// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-date-picker-field Renders \`c-date-picker-field\` with custom props 1`] = `
<div class="v-input v-text-field v-input--has-state v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light error--text">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot"><label aria-hidden="true" class="v-label v-label--active v-label--is-disabled theme--light error--text" style="left: 0px; position: absolute;">Custom label</label><input aria-label="Custom label" name="customName" disabled="disabled" type="text"></div>
      <div class="v-input__append-inner">
        <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon v-icon--disabled v-icon--link material-icons theme--light error--text">close</i></div>
      </div>
    </div>
  </div>
</div>
<div class="v-menu">
  <transition-stub name="slide-y-transition">
    <div class="v-menu__content theme--light date-picker" style="max-height: auto; min-width: 0px; max-width: 290px; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"></div>
  </transition-stub>
</div>
`;

exports[`c-date-picker-field Renders \`c-date-picker-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light date-picker"
  style="max-height: auto; min-width: 0px; max-width: 290px; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
/>
`;

exports[`c-date-picker-field Renders \`c-date-picker-field\` with default props 1`] = `
<div class="v-input v-text-field v-input--is-readonly theme--light">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot"><input aria-label="" readonly="readonly" type="text"></div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper"></div>
      </div>
    </div>
  </div>
</div>
<div class="v-menu">
  <transition-stub name="slide-y-transition">
    <div class="v-menu__content theme--light date-picker" style="max-height: auto; min-width: 0px; max-width: 290px; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"></div>
  </transition-stub>
</div>
`;

exports[`c-date-picker-field Renders \`c-date-picker-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light date-picker"
  style="max-height: auto; min-width: 0px; max-width: 290px; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
/>
`;

exports[`c-date-picker-field Renders \`c-date-picker-field\` with errors 1`] = `
<div class="v-input v-text-field v-input--has-state v-input--is-label-active v-input--is-dirty v-input--is-readonly theme--light error--text">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot"><input aria-label="" name="date-picker" readonly="readonly" type="text"></div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light error--text">
        <div class="v-messages__wrapper">
          <div class="v-messages__message message-transition-enter message-transition-enter-active">Value error</div>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="v-menu">
  <transition-stub name="slide-y-transition">
    <div class="v-menu__content theme--light date-picker" style="max-height: auto; min-width: 0px; max-width: 290px; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"></div>
  </transition-stub>
</div>
`;

exports[`c-date-picker-field Renders \`c-date-picker-field\` with errors 2`] = `
<div
  class="v-menu__content theme--light date-picker"
  style="max-height: auto; min-width: 0px; max-width: 290px; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
/>
`;

exports[`c-date-picker-field Renders \`c-date-picker-field\` with slots 1`] = `
<div class="v-input v-text-field v-input--is-readonly theme--light">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot"><input aria-label="" readonly="readonly" type="text"></div>
      <div class="v-input__append-inner">
        <div class="append-slot"></div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper"></div>
      </div>
    </div>
  </div>
</div>
<div class="v-menu">
  <transition-stub name="slide-y-transition">
    <div class="v-menu__content theme--light date-picker" style="max-height: auto; min-width: 0px; max-width: 290px; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"></div>
  </transition-stub>
</div>
`;

exports[`c-date-picker-field Renders \`c-date-picker-field\` with slots 2`] = `
<div
  class="v-menu__content theme--light date-picker"
  style="max-height: auto; min-width: 0px; max-width: 290px; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
/>
`;
